WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286564
[WebGPU] Mismatch between argument buffer index and WGSL binding index
https://bugs.webkit.org/show_bug.cgi?id=286564
Summary
[WebGPU] Mismatch between argument buffer index and WGSL binding index
Mike Wyrzykowski
Reported
2025-01-26 22:46:36 PST
[WebGPU] Mismatch between argument buffer index and WGSL binding index
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-01-26 22:46:58 PST
rdar://143628740
Mike Wyrzykowski
Comment 2
2025-01-26 22:58:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39581
EWS
Comment 3
2025-01-27 09:29:47 PST
Committed
289430@main
(be3fc66ed9c7): <
https://commits.webkit.org/289430@main
> Reviewed commits have been landed. Closing PR #39581 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug