[WebGPU] Mismatch between argument buffer index and WGSL binding index https://bugs.webkit.org/show_bug.cgi?id=286564 rdar://143628740

Reviewed by Tadeu Zagallo.

Dynamic offsets were placed into a container by argumentBufferIndex,
but looked up by bindingIndex.

Binding index is unique across all shader stages.

Argument buffer index may differ for the same binding across stages to
avoid creating holes in the AB.

Resolve this by performing the insertion by bindingIndex instead of AB index.

* LayoutTests/fast/webgpu/nocrash/fuzz-286564-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-286564.html: Added.
Add regression test.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::collectDynamicOffsetGlobals):

Canonical link: https://commits.webkit.org/289430@main